--- a/source/css/_layout/head.styl
+++ b/source/css/_layout/head.styl
@@ -234,3 +234,19 @@
 
 #page-header .site-page
   margin-left: 1rem
+
+
+.video-container
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+
+.video-container iframe
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
